WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249078
DataDetection.mm fails to build with newer clang when initializing DDQueryOffset
https://bugs.webkit.org/show_bug.cgi?id=249078
Summary
DataDetection.mm fails to build with newer clang when initializing DDQueryOffset
David Kilzer (:ddkilzer)
Reported
2022-12-10 14:37:40 PST
DataDetection.mm fails to build with newer clang when initializing DDQueryOffset. Source/WebCore/editing/cocoa/DataDetection.mm:549:53: error: missing field 'offset' initializer [-Werror,-Wmissing-field-initializers] The current code does this: DDQueryOffset lastModifiedQueryOffset = { -1, 0 }; The DDQueryOffset type is defined as: typedef struct __DDQueryOffset { CFIndex queryIndex:32; CFIndex offset:32; } DDQueryOffset;
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2022-12-10 14:39:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7446
Radar WebKit Bug Importer
Comment 2
2022-12-10 14:40:41 PST
<
rdar://problem/103217701
>
EWS
Comment 3
2022-12-10 15:02:10 PST
Committed
257687@main
(68b73575a9aa): <
https://commits.webkit.org/257687@main
> Reviewed commits have been landed. Closing PR #7446 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug