DataDetection.mm fails to build with newer clang when initializing DDQueryOffset https://bugs.webkit.org/show_bug.cgi?id=249078 <rdar://problem/103217701>

Unreviewed build fix.

Use designated initializers to fix this warning:

    DataDetection.mm:549:53: error: missing field 'offset' initializer [-Werror,-Wmissing-field-initializers]

* Source/WebCore/editing/cocoa/DataDetection.mm:
(WebCore::DataDetection::detectContentInRange):
- Switch to using designated initializers for DDQueryOffset.

Canonical link: https://commits.webkit.org/257687@main